force-app/main/default/objects/Salesforce_Certification__c/Salesforce_Certification__c.object-meta.xml
<CustomObject>
    <label>Salesforce Certification</label>
    <nameField>
        <displayFormat>Cert-{000}</displayFormat>
        <label>Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>