force-app/main/default/objects/Salesforce_Certification__c/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>