force-app/main/default/objects/Salesforce_Certification__c/fields/Certification_Domain__c.field-meta.xml
<CustomField>
    <fullName>Certification_Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>