force-app/main/default/objects/Salesforce_Certification__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Certified Associate</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Omnistudio Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified AI Associate</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Sharing and Visibility Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Financial Service Cloud - Accredited Professional</fullName>
            </value>
            <value>
                <fullName>Docusign CLM Administration Specialist</fullName>
            </value>
            <value>
                <fullName>Docusign eSignature Administration Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform App Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>