force-app/main/default/objects/Salesforce_Certification__c/fields/Certified_Resource__c.field-meta.xml
<CustomField>
    <fullName>Certified_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesforce Certifications</relationshipLabel>
    <relationshipName>Salesforce_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>