force-app/main/default/objects/Salesforce_Certification__c/fields/Due_Data__c.field-meta.xml
<CustomField>
    <fullName>Due_Data__c</fullName>
    <label>Due Data</label>
    <type>Date</type>
</CustomField>